# SnakeGameCPP

./: .gitignore  Apple.cpp  CMakeLists.txt  Enemy.cpp  Enemy.h  Food.cpp  Food.h  Game.cpp  Game.h  GameTypes.h  IGameObject.h  IPlayer.h  Level.cpp  Level.h  README.md  Snake.cpp  Snake.h  Spawner.cpp  Spawner.h  Trigger.cpp  Trigger.h  main.cpp
Core/: CMakeLists.txt
Core/Apple/: CMakeLists.txt
Core/Enemy/: CMakeLists.txt
Core/Enemy/include/: Enemy.h
Core/Enemy/src/: Enemy.cpp
Core/Food/: CMakeLists.txt
Core/Food/include/: Food.h
Core/GUI/: CMakelists.txt
Core/GUI/CreateHostWindow/: CMakeLists.txt
Core/GUI/CreateHostWindow/include/: CreateHostWindow.h
Core/GUI/CreateHostWindow/src/: CreateHostWindow.cpp
Core/GUI/EndGameWindow/: CMakeLists.txt
Core/GUI/EndGameWindow/include/: EndGameWindow.h
Core/GUI/EndGameWindow/src/: EndGameWindow.cpp
Core/GUI/EscMenuWindow/: CMakeLists.txt
Core/GUI/EscMenuWindow/include/: EscMenuWindow.h
Core/GUI/EscMenuWindow/src/: EscMenuWindow.cpp
Core/GUI/EscSettingsWindow/: CMakeLists.txt
Core/GUI/EscSettingsWindow/include/: EscSettingsWindow.h
Core/GUI/EscSettingsWindow/src/: EscSettingsWindow.cpp
Core/GUI/LoadGameWindow/: CMakeLists.txt
Core/GUI/LoadGameWindow/include/: LoadGameWindow.h
Core/GUI/LoadGameWindow/src/: LoadGameWindow.cpp
Core/GUI/NewGameWindow/: CMakeLists.txt
Core/GUI/NewGameWindow/include/: NewGameWindow.h
Core/GUI/NewGameWindow/src/: NewGameWindow.cpp
Core/GUI/SaveGameWindow/: CMakeLists.txt
Core/GUI/SaveGameWindow/include/: SaveGameWindow.h
Core/GUI/SaveGameWindow/src/: SaveGameWindow.cpp
Core/GUI/SettingsWindow/: CMakeLists.txt
Core/GUI/SettingsWindow/include/: SettingsWindow.h
Core/GUI/SettingsWindow/src/: SettingsWindow.cpp
Core/GUI/StartWindow/: CMakeLists.txt
Core/GUI/StartWindow/include/: StartGameWindow.h
Core/GUI/StartWindow/src/: StartGameWindow.cpp
Core/GUI/include/: GUI.h  GUITypes.h
Core/GUI/src/: GUI.cpp
Core/Game/: CMakeLists.txt
Core/Game/include/: Game.h  GameTypes.h
Core/Game/src/: Game.cpp
Core/IGameObject/: CMakeLists.txt
Core/IGameObject/include/: IGameObject.h
Core/Level/: CMakeLists.txt
Core/Level/src/: Level.cpp
Core/Player/: CMakeLists.txt
Core/Snake/: CMakeLists.txt
Core/Snake/include/: Snake.h
Core/Snake/src/: Snake.cpp
Core/Spawner/: CMakeLists.txt
Core/Spawner/include/: Spawner.h
Core/Spawner/src/: Spawner.cpp
Core/Trigger/: CMakeLists.txt
Core/Trigger/include/: Trigger.h
Core/Trigger/src/: Trigger.cpp
libs/SDL2/include/SDL2/: SDL_assert.h  SDL_audio.h  SDL_blendmode.h  SDL_gamecontroller.h  SDL_hints.h  SDL_joystick.h  SDL_locale.h  SDL_messagebox.h  SDL_mouse.h  SDL_pixels.h  SDL_render.h  SDL_shape.h  SDL_surface.h  SDL_video.h
